<resources>
    <string name="app_name">Студент инфо</string>
    <string name="title_activity_login">Логин</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Адреса</string>
    <string name="prompt_password">Лозинка</string>
    <string name="action_sign_in">Пријави се</string>
    <string name="action_sign_in_short">Пријави се</string>
    <string name="error_invalid_email">Адреса није валидна</string>
    <string name="error_invalid_password">Лозинка је прекратка</string>
    <string name="error_incorrect_password">Лозинка је нетачна</string>
    <string name="error_field_required">Ово поље је обавезно</string>

    <string name="logout">Одјава</string>
    <string name="logoutConfirmation">Да ли сте сигурни да желите да се одјавите?</string>
    <string name="sign_out">Одјави се</string>
    <string name="weeklySchedule">Недељни распоред</string>
    <string name="yearlyCalender">Календар активности</string>
    <string name="notifications">Обавештења</string>
    <string name="settings">Подешавања</string>
    <string name="off">Искљ.</string>
    <string name="on">Укљ.</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="or">или</string>
    <string name="emailSent">Емаил послат</string>
    <string name="youDontHaveAnAccount"><u>Немате налог?</u></string>
    <string name="emailNotSent">Емаил није послат, покушајте поново</string>
    <string name="networkConnection">Проверите интернет конекцију</string>
    <string name="title_activity_navigation_drawer">Навигациона фиока</string>
    <string name="unableToChangeGroup">Тренутно није могуће променити групу. Проверите Вашу интернет конекцију.</string>
    <string name="information">Информације</string>
    <string name="aboutUs">О нама</string>
    <string name="raf.edu.rs">raf.edu.rs</string>
    <string name="devana.rs">devana.rs</string>
    <string name="rafPhone1">(011)2627613</string>
    <string name="rafPhone2">(011)2633321</string>
    <string name="rafEmail1">raf@raf.edu.rs</string>
    <string name="rafEmail2">sekretarijat@raf.edu.rs</string>
    <string name="rafEmail3">marketing@raf.edu.rs</string>
    <string name="inCollaborationWith">У сарадњи са:</string>

    <string name="projectMakers">Учесници пројекта:</string>
    <string name="nikolaVukovic">Никола Вуковић</string>
    <string name="milanVucic">Милан Вучић</string>
    <string name="nikolaNinkovic">Никола Нинковић</string>
    <string name="nebojsaUrosevic">Небојша Урошевић</string>
    <string name="mentors">Ментори:</string>
    <string name="vladimirPrelovac">Владимир Преловац</string>
    <string name="andrejBencic">Андреј Бенчић</string>
    <string name="miljanTekic">Миљан Текић</string>
    <string name="account">Налог</string>
    <string name="changePassword">Промена лозинке</string>
    <string name="newPassword">Нова лозинка</string>
    <string name="confirmPassword">Потврди лозинку</string>
    <string name="passwordsDoNotMatch">Лозинке се не поклапају</string>
    <string name="passwordChangeSuccessful">Промена лозинке је успела</string>
    <string name="passwordChangeNotSuccessful">Промена лозинке није успела</string>
    <string name="logoutAfterPasswordChange">Одјави ме после промене</string>
    <string name="telephones">Телефони:</string>
    <string name="contact">Контакт:</string>



    <string name="navigation_drawer_open">Отвори навигациону фиоку</string>
    <string name="navigation_drawer_close">Затвори навигациону фиоку</string>

    <string name="action_settings">Подешавања</string>
    <string name="action_send">Пoшаљи</string>
    <string name="placeholderUsername">android.studio@android.com</string>
    <string name="placeholderGroup">Група 101</string>
    <string name="pushNotifications">Push нотификације</string>
    <string name="pushNotificationsDescription">Укључите или искључите push нотификације</string>
    <string name="vibration">Вибрација</string>
    <string name="vibrationDescription">Укључите или искључите вибрацију</string>
    <string name="group">Група %1$s</string>
    <string name="groups">Групе</string>
    <string name="chooseGroup">Изабери групу</string>
    <string name="noClassesToday">Нема предавања</string>
    <string name="notChosen"> није изабрана</string>
    <string name="back">Назад</string>
    <string name="ok">ОК</string>
    <string name="fetchingGroups">Дохватање група</string>
    <string name="fetchingSchedule">Дохватање распореда</string>
    <string name="pleaseWait">Молим Вас, сачекајте</string>
    <string name="noNotifications">Нема обавештења</string>
    <string name="placeholderDate">17</string>
    <string name="placeholderMonth">АВГ</string>
    <string name="placeholderFullDate">17.5.2017</string>
    <string name="placeholderAgo">Пре 25мин</string>
    <string name="placeholderInfoNotification">Дискретне структуре</string>
    <string name="placeholderEventDescription">На данашњи дан се дешавају нека дешавања јако битна за људе који у њима учествују и саћемо да видимо шта се дешава са овим дешавањем ако се деси да је нереално дугачко јебига</string>
    <string name="rafLogoImageDescription">РАФ ЛОГО</string>
    <string name="feedback">Утисци и сугестије</string>
    <string name="send">Пошаљи</string>
    <string name="thankyou">Хвала Вам</string>
    <string name="notificationSound">Звук обавештења</string>
    <string name="enterMessageText">Унесите текст поруке</string>
    <string name="somethingHappened">Дошло је до грешке</string>
    <string name="enterEmailForResettingPassword">Унесите Вашу адресу да бисте добили маил са инструкцијама за ресетовање лозинке:</string>
    <string name="forgotPassword"><u>Заборавили сте лозинку?</u></string>
    <string name="loginRemark">Да бисте се пријавили, користите адресу на коју сте од Вашег факултета добили емаил за отварање налога.\nУколико немате отворен налог за Студент Инфо, обратите се администратору на Вашем факултету.</string>
    <string name="note">Напомена</string>

    <string name="hello_blank_fragment">Ћао празни фрагменту</string>
    <string name="start">Почетак:</string>
    <string name="end">Крај:</string>
    <string name="monday">ПОН</string>
    <string name="tuesday">УТО</string>
    <string name="wednesday">СРЕ</string>
    <string name="thursday">ЧЕТ</string>
    <string name="friday">ПЕТ</string>
    <string name="saturday">СУБ</string>
    <string name="sunday">НЕД</string>

    <string name="mondayLong">Понедељак</string>
    <string name="tuesdayLong">Уторак</string>
    <string name="wednesdayLong">Среда</string>
    <string name="thursdayLong">Четвртак</string>
    <string name="fridayLong">Петак</string>
    <string name="saturdayLong">Субота</string>
    <string name="sundayLong">Недеља</string>

    <string name="january">ЈАН</string>
    <string name="february">ФЕБ</string>
    <string name="march">МАР</string>
    <string name="april">АПР</string>
    <string name="may">МАЈ</string>
    <string name="june">ЈУН</string>
    <string name="july">ЈУЛ</string>
    <string name="august">АВГ</string>
    <string name="september">СЕП</string>
    <string name="october">ОКТ</string>
    <string name="november">НОВ</string>
    <string name="december">ДЕЦ</string>

        <string name="years">година</string>
        <string name="year">годину</string>
        <string name="monthsFive">месеци</string>
        <string name="monthsTwo">месецa</string>
        <string name="month">месец</string>
        <string name="weeks">недеље</string>
        <string name="week">недељу</string>
        <string name="days">дана</string>
        <string name="day">дан</string>
        <string name="hoursFive">сати</string>
        <string name="hoursTwo">сата</string>
        <string name="hour">сат</string>
        <string name="minutes">минута</string>
        <string name="minute">минут</string>
        <string name="secondsFive">секунди</string>
        <string name="secondsTwo">секунде</string>
        <string name="second">секунду</string>

    <string name="before">Пре</string>
    <string name="notificationExpiresAt">Обавештење истиче:</string>

    <string name="startTime">Почетак</string>
    <string name="endTime">Крај</string>
    <string name="description">Опис</string>

    <string name="Predavanje">Предавање</string>
    <string name="Vezbe">Вежбе</string>
    <string name="PredavanjaIVezbe">Предавања и вежбе</string>
    <string name="Praktikum">Практикум</string>

    <string name="hour09">09h</string>
    <string name="hour10">10h</string>
    <string name="hour11">11h</string>
    <string name="hour12">12h</string>
    <string name="hour13">13h</string>
    <string name="hour14">14h</string>
    <string name="hour15">15h</string>
    <string name="hour16">16h</string>
    <string name="hour17">17h</string>
    <string name="hour18">18h</string>
    <string name="hour19">19h</string>
    <string name="hour20">20h</string>
    <string name="hour21">21h</string>
    <string name="title_activity_lecture_details">Детаљи о предавању</string>
    <string name="title_activity_forgot_password">Заборављена лозинка</string>
    <string name="title_activity_about_us">О нама</string>
    <string name="title_activity_change_password">Промена лозинке</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>

</resources>
