<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/groups">
        <ListPreference
            android:key="groups"
            android:title="@string/chooseGroup"
            android:dialogTitle="@string/chooseGroup"
            android:negativeButtonText="@string/back"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications">

        <CheckBoxPreference
            android:key="pushNotifications"
            android:title="@string/pushNotifications"
            android:summary="@string/pushNotificationsDescription"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="vibrationEnabled"
            android:title="@string/vibration"
            android:summary="@string/vibrationDescription"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>