<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_weekly_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/weeklySchedule"/>
        <item
            android:id="@+id/nav_yearly_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/yearlyCalender" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/notifications" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/aboutUs" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/sign_out" />
    </group>
</menu>